<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:gravity="center_horizontal"
android:layout_marginTop="5dip"
android:layout_marginLeft="20dip"
android:layout_marginRight="20dip"
android:layout_marginBottom="15dip"
android:padding="10dip"
>

<TextView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:gravity="center"
android:paddingBottom="2dip"
android:textAppearance="@android:style/TextAppearance.Large"
android:textColor="#FFF"
android:text="@string/login_get_started" />

<TextView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:gravity="center"
android:paddingBottom="2dip"
android:textColor="#FFF"
android:text="@string/login_get_started_more" />

<EditText xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/usernameEditText"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:inputType="textEmailAddress"
android:textAppearance="@android:style/TextAppearance.Large"
android:hint="@string/username" />

<EditText xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/passwordEditText"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:inputType="textPassword"
android:imeOptions="actionDone"
android:textAppearance="@android:style/TextAppearance.Large"
android:hint="@string/password" />

<Button xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/login_button"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:enabled="true"
android:textAppearance="@android:style/TextAppearance.Large"
android:text="@string/login_label" />

<TextView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/newAccountTextView"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:gravity="right"
android:paddingBottom="2dip"
android:textAppearance="@android:style/TextAppearance.Large"
android:textColor="#FFF"
android:text="@string/need_an_account" />

</LinearLayout>

